--- a/index.html
+++ b/index.html
@@ -19,7 +19,10 @@
         </div>
 
         <div class="messages">
-            <p>Informacion</p>
+            <p>Vidas: <span id = "lives"></span></p>
+            <p>Tiempo: <span id = "time"></span></p>
+            <p>Record: <span id = "recordTime"></span></p>
+            <p id = "result"></p>
         </div>
     </div>
     <script src="maps.js"></script>
