Correcciones finales + interfaces win and fail

--- a/index.html
+++ b/index.html
@@ -25,6 +25,16 @@
             <p id = "result"></p>
         </div>
     </div>
+    <div class = "win inactive">
+        <span class = "mess">You Win!!!</span>
+        <span class = "mess">🏆</span>
+        <button id = "winRestart">Restart</button>
+    </div>
+    <div class = "fail inactive">
+        <span class = "mess">You Fail...</span>
+        <span class = "mess">👎</span>
+        <button id = "failRestart">Restart</button>
+    </div>
     <script src="maps.js"></script>
     <script src="game.js"></script>
 </body>
